--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,17 +1,9 @@
 .container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 mat-drawer {
   width: 240px;
   padding: 40px;
-}
-
-mat-drawer-content {
-  padding: 40px;
-}
-
-mat-drawer-content div:first-child {
-  margin-bottom: 40px;
 }
